; ModuleID = '/home/carl/AnghaBench/RetroArch/ps2/compat_files/extr_ps2_descriptor.c__free_ps2_io.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ps2/compat_files/extr_ps2_descriptor.c__free_ps2_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_lock_sema_id = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_free_ps2_io() #0 {
  %1 = call i32 (...) @_lock()
  %2 = call i32 (...) @_unlock()
  %3 = load i64, i64* @_lock_sema_id, align 8
  %4 = icmp sge i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i64, i64* @_lock_sema_id, align 8
  %7 = call i32 @DeleteSema(i64 %6)
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i32 @_lock(...) #1

declare dso_local i32 @_unlock(...) #1

declare dso_local i32 @DeleteSema(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
